<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roxx_jetson_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tmd@todo.todo">tmd</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav2_bringup</depend>
  <depend>robot_localization</depend>
  <depend>isaac_ros_visual_slam</depend>
  <depend>isaac_ros_nvblox</depend>
  <depend>depthai_ros_driver</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
